[dfs] Detect (but don't fully support) Opus DDOS images.
The volume map is detected but volumes B-H are ignored.

--- a/doc/dfs.1
+++ b/doc/dfs.1
@@ -544,7 +544,7 @@ l l.
 Variant|Status
 Acorn DFS|Supported.
 Watford DFS|Supported.  Some differences are described below.
-Opus DFS|Not yet supported.
+Opus DDOS|Detected, but only volume A is supported.
 Solidisk DFS|Not yet supported.
 HDFS|Not yet supported.
 .TE
