--- a/doc/dfs.1
+++ b/doc/dfs.1
@@ -1,5 +1,5 @@
 '\" t
-.TH DFS 1 2020-06-10 Youngman \" -*- nroff -*-
+.TH DFS 1 2020-06-21 Youngman \" -*- nroff -*-
 
 .SH NAME
 dfs \- read Acorn DFS disc images
@@ -50,7 +50,14 @@ Specifies the drive number to assume to be current when executing the
 specified command, as if the user had executed the command
 .B *DRIVE
 .I D
-but with somewhat narrower validation.
+but with somewhat narrower validation.  When using an Opus DDOS disc
+image,
+.I D
+can contain a letter suffix to indicate a volume, just as with the
+.B *DRIVE
+command in Opus DDOS.  See also
+.B "Drive Number Handling"
+below.
 
 .IP "\-\-ui \fISTYLE\fR"
 Follow the user-interface conventions of DFS ROMs of type
@@ -346,6 +353,8 @@ the current directory is \*(lqP\*(rq.
 However, that wildcard does not also match \*(lq:0.$.!BOOT\*(rq
 because \*(lq*\*(rq will not match \*(lq.\*(rq.
 
+Opus DDOS volume labels are allowed in wildcards.
+
 Acorn DFS documentation sometimes refers to wildcards as
 .IR "ambiguous file specifications" .
 
@@ -544,7 +553,15 @@ l l.
 Variant|Status
 Acorn DFS|Supported.
 Watford DFS|Supported.  Some differences are described below.
-Opus DDOS|Detected, but only volume A is supported.
+Opus DDOS|T{
+Limited support (e.g. the
+.B cat
+and
+.B dump
+commands work but
+.B sector-map
+does not).
+T}
 Solidisk DFS|Not yet supported.
 HDFS|Not yet supported.
 .TE
@@ -579,33 +596,47 @@ have great usability characteristics.
 These behaviours may need to change in the future (breaking backward
 compatibility) to become more usable.
 
-.SS Drive Number Validation
+.SS Drive Number Handling
 
 The
 .BR dfs (1)
 program tries to follow the conventions of DFS when handling drive
 number, wildcard and drive number arguments.  This means that
 validation is in some cases less strict than is common in the Unix
-user experience.  For example, the command
+user experience.  However, it is also more strict than some
+DFS implementations.
+For example, the command
 
 .EX
 dfs --file foo.ssd cat :0junk
 .EE
 
-produces a catalog of disc 0 without error, even though
-.I :0junk
-is not a valid DFS file name.
-However there are cases where it doesn't seem helpful to
-be lax, and so the command
+is an error, even though Acorn DFS allows this.
+We reject it to avoid confusion when using Opus
+DDOS volume identifiers.
 
-.EX
-dfs --file foo.ssd cat 0 0
-.EE
+Please do not rely on future versions of the program accepting
+arguments which might reasonably be considered to contain an error.
 
-produces an error message.  Please do not rely on future versions of
-the program accepting arguments which might reasonably be considered
-to contain an error.
+The
+.B \-\-drive
+option support and commands which take drive number arguments
+accept Opus DDOS volume labels (A\-H) even when dealing with
+image files which are not Opus DDOS images.  Volume letters can
+appear in file names and wildcards (e.g. with
+.BR INFO ).
+This is analogous to the fact that Opus DDOS reads non-Opus discs as
+if they were Acorn DFS discs.
+Volumes B\-H are invalid on non-Opus discs.
+Drives 0A and 0 are treated similarly, though in come cases there are
+small differences in what is displayed in the user interface.
 
+In the future, a small number of commands will treat 0 and 0A
+differently when working with Opus DDOS images.
+The
+.B sector-map
+command, for example, will likely distinguish these, in one case
+displaying a single volume and in the other displaying the whole disc.
 
 .SH "BUGS"
 Please report bugs to james@youngman.org.
