[dfs] Apply $COLUMNS only if the output is going to a terminal.

--- a/doc/dfs.1
+++ b/doc/dfs.1
@@ -516,7 +516,7 @@ standard error stream, that is a bug (see
 
 .SS COLUMNS
 
-The
+When the output is going to a terminal, the
 .B COLUMNS
 environment variable affects how many columns of output are produced
 for the
