[doc] State that the UI doesn't distinguish Acorn 1770 and 8271 ROMs.

--- a/doc/dfs.1
+++ b/doc/dfs.1
@@ -67,6 +67,11 @@ Use
 to find the list of supported styles. If you don't use this option,
 the user-interface behaviour will mostly be determined by the format
 of disc image being used.
+There are variations between ROM behaviours of which
+.BR dfs (1)
+takes no acount.  For example the directory and library part of the
+.B *CAT
+output differs between the Acorn 8271 and 1770 ROMs.
 
 .SH "COMMANDS"
 
