[doc] avoid some tbl error messages.

--- a/doc/bbcbasic.5
+++ b/doc/bbcbasic.5
@@ -577,24 +577,22 @@ tab(|) allbox;
 lb     lb   lb   lb   lb lb    lb
 l      c    s    c    s  s     l
 l      c    s    s    l  s     l
-l      ^    s    c    l  s     ^
-l      ^    s    c    l  s     ^
-l      ^    s    c    l  s     ^
-l      ^    s    c    l  s     ^
-l      ^    s    c    l  s     ^
-l      ^    s    c    l  s     ^
-l      ^    s    c    l  s     ^
-l      ^    s    c    l  s     ^
-l      ^    s    c    l  s     ^
+l      ^    s    ^    l  s     ^
+l      ^    s    ^    l  s     ^
+l      ^    s    ^    l  s     ^
+l      ^    s    ^    l  s     ^
+l      ^    s    ^    l  s     ^
+l      ^    s    ^    l  s     ^
+l      ^    s    ^    l  s     ^
+l      ^    s    ^    l  s     ^
+l      ^    s    ^    l  s     ^
 l      c    s    c    s  s     ^
 l      c    s    s    l  s     ^
 l      ^    s    ^    l  s     ^.
 Bytes|6502|Z80|PDP11|ARM|Mac|Windows
 0xC8|"LOAD"|Extension|"CASE"
 0xC8 0x8E|T{
-.I interpreted
-.br
-.I separately
+.I interpreted separately
 T}|"CASE"|T{
 .I interpreted
 .br
@@ -610,14 +608,10 @@ T}
 0xC8 0x96|||"WAIT"
 0xC8 0x97|||"MOUSE"
 0xC8 0x98|T{
-.I interpreted
-.br
-.I separately
+.I interpreted separately
 T}|"QUIT"
 0xC8 0x99|T{
-.I interpreted
-.br
-.I separately
+.I interpreted separately
 T}|"SYS"
 0xC8 0x9A|||"INSTALL"
 0xC8 0x9B|||"LIBRARY"
