[dfs] support two-sided HFE files.

--- a/doc/dfs.1
+++ b/doc/dfs.1
@@ -615,12 +615,12 @@ manual page for a description of the MMB format.
 The HFE file format supports a much wider range of possiblities than
 are currently implemented in
 .BR dfs (1).
-For example, the HFE file format supports double-sided and
-double-density disks but neither is currently implemented in
+For example, the HFE file format supports double-density disks but
+this is not currently implemented in
 .BR dfs (1).
 Support for the HFE format is new, is only lightly tested, and covers
 HFE version 1 only.
-Tthere may be some problems still to be ironed out.
+There may be some problems still to be ironed out.
 
 .SH CONFORMING TO
 
