[dfs] preliminary support for HFE version 3.

--- a/doc/dfs.1
+++ b/doc/dfs.1
@@ -624,7 +624,7 @@ For example, the HFE file format supports double-density disks but
 this is not currently implemented in
 .BR dfs (1).
 Support for the HFE format is new, is only lightly tested, and covers
-HFE version 1 only.
+HFE versions 1 and 3 only (that is, not version 2).
 There may be some problems still to be ironed out.
 
 .SH CONFORMING TO
