[dfs] support compressed HFE files.

--- a/doc/dfs.1
+++ b/doc/dfs.1
@@ -567,7 +567,7 @@ formats.  The HFE format (extension ".hfe") is self-describing and
 supports a variety of types of disc.  The last one (".mmb") is a
 multi-disc format.
 
-Any of the supported disc images except ".hfe" may be compressed with
+Any of the supported disc images may be compressed with
 GNU
 .B gzip
 are also accepted and should have the additional file extension ".gz".
