[doc] Mention 65C816 and Matt Godbolt's line number blog post.
Indicate that the BBC BASIC implementation for the WDC 65C816 exists
but isn't documented here.

Add to SEE ALSO a pointer to Matt Godbolt's blog post on the
representation of line numbers.

--- a/doc/bbcbasic.5
+++ b/doc/bbcbasic.5
@@ -858,9 +858,14 @@ implementation.
 .SH "OTHER DIALECTS"
 
 This document describes all the formats I have been able to find
-documentation for or find a usable implementation of.  There is also a
-BBC BASIC implementation for the 6809 CPU which I have not obtainted,
-and so it is not documented here.
+documentation for or find a usable implementation of.
+There are also BBC BASIC implementations for the following CPUs which
+I have not obtainted, and so these are not documented here:
+
+.IP \(bu 2
+Motorola 6809
+.IP \(bu 2
+WDC 65C816
 
 If you have additional information or corrections, please use the
 contact information given in the
@@ -931,5 +936,15 @@ version 1.16, J. G. Harston, 2013-07-29
 
 .UR http://mdfs.net/Docs/Comp/BBCBasic/Line
 BBC BASIC Line formats, collected by J. G. Harston
+.UE
+.br
+
+.UR http://mdfs.net/Software/BBCBasic/Versions
+BBC BASIC versions, collected by J. G. Harston
+.UE
+.br
+
+.UR https://xania.org/200711/bbc-basic-line-number-format
+BBC BASIC binary line number format, by Matt Godbolt
 .UE
 .br
