[doc] There is a BBC BASIC implementation for the Atmel AVR.
According to http://mdfs.net/Software/BBCBasic/ there is also an
implementation for the Atmel AVR.

--- a/doc/bbcbasic.5
+++ b/doc/bbcbasic.5
@@ -866,6 +866,8 @@ I have not obtainted, and so these are not documented here:
 Motorola 6809
 .IP \(bu 2
 WDC 65C816
+.IP \(bu 2
+Atmel AVR
 
 If you have additional information or corrections, please use the
 contact information given in the
